--- a/xrweb.html
+++ b/xrweb.html
@@ -14,10 +14,10 @@
 <body onload="loadSettings();">
   <!-- Sidebar -->
 <div class="w3-sidebar w3-teal w3-bar-block w3-border-right" style="height:75%;display:none" id="mySidebar">
-  <button onclick="closeNav()" class="w3-bar-item w3-large">Close &times;</button>
+  <button onclick="closeNav();" class="w3-bar-item w3-large">Save &times;</button>
   <div>My Call Sign:<br/><input type="text" id="mycall" placeholder="Enter Call Sign"></div>
   <div>My Chat Name:<br/><input type="text" id="myname" placeholder="Enter Chat Name"></div>
-  <div>Pass Phrase:<br/><input type="password" id="passphr" placeholder="Enter Pass Phrase"></div>
+  <div>Pass Phrase:<br/><input type="text" id="passphr" placeholder="Enter Pass Phrase"></div>
 	<p><a href="#top" onclick="alert('XRouter Web, &copy;&nbsp;2023&nbsp;GrizzWorks, LLC\n\nAll Rights Reserved')">About XRouter Web</a></p>
 	<p><a href="https://www.radcommsoft.com/contact" target="_blank">Contact</a></p>
 </div>
